# ages-beyond

./: .gitattributes  Cargo.toml  NOTICE.md  README.md  mmod.ini
.github/workflows/: build-ages-beyond.yml
Assets/: BM tiles.FPK
Assets/Art/Movies/Victory/: Mastery.bik
Assets/Python/: CvDiplomacy.py
Companion/: README.md
CvGameCoreDLL/: .gitattributes  .gitignore  AgesBeyondCompanion.cpp  AgesBeyondCompanion.h  AgesBeyondEvents.cpp  AgesBeyondEvents.h  BUILDING.md  CvCity.cpp  CvGame.cpp  CvGame.h  CvGameCoreDLL.rc  CvGameCoreDLL.vcproj  CvPlayer.cpp  CvTeam.cpp  CyGame.cpp  CyGame.h  CyGameInterface.cpp  Makefile.vc71  README.md
CvGameCoreDLL/.github/workflows/: build-cvgamedll.yml
CvGameCoreDLL/scripts/: build_vc71_nmake.bat  build_vs2003.bat  prepare_vc71_toolchain.ps1
Mod/: Ages Beyond.ini
Mod/Assets/Python/: AgesBeyondNotifications.py  AgesBeyondScreenUtils.py
Mod/Assets/Python/EntryPoints/: CvEventInterface.py  CvScreenUtilsInterface.py
Mod/Chronicle/: README.txt
crates/companion/: Cargo.toml
crates/companion/src/: bridge.rs  chronicle.rs  director.rs  events.rs  ipc.rs  llm.rs  main.rs  memory.rs  notifications.rs  save_state.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
design/: 01-quest-failure-decay.md  02-quest-chains.md  03-diplomatic-consequences.md  04-reputation-tags.md  05-rival-quest-mirrors.md  06-world-tension-system.md  07-civilization-ideology-from-play.md  08-named-institutions.md  09-era-end-chronicle.md  README.md
scripts/: package_mod.ps1
