[package]
name = "ages-beyond-companion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mod"
path = "src/main.rs"

[dependencies]
ages-beyond-protocol = { path = "../protocol" }
anyhow = "1"
civ4 = { git = "https://github.com/i386/CvGameCoreDLL.git", branch = "feature/civ4-bridge" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
